Fix up some spacing issues and backups/support layout bugs

--- a/components/scss/components/cards/CardImageHeader.scss
+++ b/components/scss/components/cards/CardImageHeader.scss
@@ -13,6 +13,12 @@
         width: 40px;
     }
 
+    &-tag {
+        border: $border;
+        padding: 1px 3px;
+        margin-left: 10px;
+    }
+
     &-nav {
         padding: 5px 0 0 0;
     }
